[package]
name = "cecd"
version = "0.1.0"
authors = ["Philipp Joram <mail@phijor.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlink-sys = "0.2"
netlink-packet-core = "0.1"
netlink-packet-utils = "0.1"
byteorder = "1"
failure = "0.1"
libc = "0.2"
