[package]
name = "cecd"
version = "0.1.0"
authors = ["Philipp Joram <mail@phijor.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
libc = "0.2"
pcap = "0.7"
byteorder = "~1.3"
anyhow = "1"
radiotap = "1"
log = "0.4"
pretty_env_logger = "0.4"

[dependencies.ieee80211]
git = "https://github.com/SpiralP/rust-ieee80211.git"
